# PURPLE

./: UNDERTALEPURPLE.yyp  pre_project_step.bat
datafiles/lua/: actor.lua  enum.lua  game.lua
extensions/GMLua/: CMakeLists.txt  GMLua.yy
extensions/GMLua/LuaJIT/include/: lua.h  luajit.h
extensions/GMLua/LuaJIT/lib/: lua51.lib
extensions/GMLua/include/: Visibility.h
extensions/GMLua/src/: GMLua.cpp
fonts/fnt_basic/: fnt_basic.old.yy  fnt_basic.yy
objects/SPELL/: SPELL.yy
objects/UI/: UI.yy
objects/bed_of_flowers/: Create_0.gml  bed_of_flowers.yy
objects/cutsceneTrigger/: Collision_obj_player.gml  Create_0.gml  cutsceneTrigger.yy
objects/cutsceneTrigger1/: Collision_obj_player1.gml  Collision_obj_player2.gml  cutsceneTrigger1.yy
objects/flower_bed/: Create_0.gml  flower_bed.yy
objects/flower_bed1/: flower_bed1.yy
objects/flowey_battle/: flowey_battle.yy
objects/flowey_battle1/: flowey_battle1.yy
objects/flowey_detect/: Collision_obj_player.gml  flowey_detect.yy
objects/interaction/: interaction.yy
objects/invisible_wall/: Create_0.gml  invisible_wall.yy
objects/invisible_wall1/: invisible_wall1.yy
objects/invisibleink/: Create_0.gml  invisibleink.yy
objects/invisibleink1/: invisibleink1.yy
objects/obj_camera/: Other_4.gml  obj_camera.yy
objects/obj_flowey/: Alarm_0.gml  Create_0.gml  Other_7.gml  Step_0.gml  obj_flowey.yy
objects/obj_flowey1/: obj_flowey1.yy
objects/obj_flowey2/: obj_flowey2.yy
objects/obj_game_controller/: Other_2.gml  Other_3.gml  Step_0.gml  obj_game_controller.yy
objects/obj_player/: Create_0.gml  (+6 more)
(+249 files in other folders)
